// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Default className override 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    aria-hidden={true}
    className="fakeClassName"
    data-css-1a2nnhr=""
  >
    <img
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://en.gravatar.com/userimage/8399312/b15448d840afacd0eb18102baf788255.jpeg?d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
    <div
      aria-label="Jake Trent"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#009380",
        }
      }
    >
      JT
    </div>
  </div>
</div>
`;

exports[`Storyshots Default large 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1vpftcu=""
  >
    <img
      alt="large avatar"
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/0f792a763ebf08411c7f566079e4adc7?s=400&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
    <div
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#C00F00",
        }
      }
    >
      :)
    </div>
  </div>
</div>
`;

exports[`Storyshots Default light image 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1a2nnhr=""
  >
    <img
      alt="light image avatar"
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://en.gravatar.com/userimage/8399312/b15448d840afacd0eb18102baf788255.jpeg?d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
    <div
      aria-label="Jake Trent"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#009380",
        }
      }
    >
      JT
    </div>
  </div>
</div>
`;

exports[`Storyshots Default medium 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1a2nnhr=""
  >
    <img
      alt="medium avatar"
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/0f792a763ebf08411c7f566079e4adc7?s=400&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
    <div
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#C00F00",
        }
      }
    >
      :)
    </div>
  </div>
</div>
`;

exports[`Storyshots Default small 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-xthig=""
  >
    <img
      alt="small avatar"
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/0f792a763ebf08411c7f566079e4adc7?s=400&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
    <div
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#C00F00",
        }
      }
    >
      :)
    </div>
  </div>
</div>
`;

exports[`Storyshots Default style override 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    aria-hidden={true}
    data-css-1a2nnhr=""
    style={
      Object {
        "border": "3px solid red",
      }
    }
  >
    <img
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://en.gravatar.com/userimage/8399312/b15448d840afacd0eb18102baf788255.jpeg?d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
    <div
      aria-label="Jake Trent"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#009380",
        }
      }
    >
      JT
    </div>
  </div>
</div>
`;

exports[`Storyshots Default xLarge 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-5nxofe=""
  >
    <img
      alt="xLarge avatar"
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/0f792a763ebf08411c7f566079e4adc7?s=400&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
    <div
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#C00F00",
        }
      }
    >
      :)
    </div>
  </div>
</div>
`;

exports[`Storyshots Default xSmall 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-79vgce=""
  >
    <img
      alt="xSmall avatar"
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/0f792a763ebf08411c7f566079e4adc7?s=400&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
    <div
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#C00F00",
        }
      }
    >
      :)
    </div>
  </div>
</div>
`;

exports[`Storyshots Image cases flat, long 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    aria-hidden={true}
    data-css-1a2nnhr=""
  >
    <img
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://cdn1.thr.com/sites/default/files/2019/03/chrisrocknaacp.jpg"
    />
    <div
      aria-label="Chris Rock"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#7048C6",
        }
      }
    >
      CR
    </div>
  </div>
</div>
`;

exports[`Storyshots Image cases square 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    aria-hidden={true}
    data-css-1a2nnhr=""
  >
    <img
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://gravatar.com/avatar/63a1fa126f541c0f0ecf1d74f7a40640?s=320&r=g&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
    <div
      aria-label="Jake Trentsky"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#C00F00",
        }
      }
    >
      JT
    </div>
  </div>
</div>
`;

exports[`Storyshots Image cases tall, thin 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    aria-hidden={true}
    data-css-1a2nnhr=""
  >
    <img
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://akns-images.eonline.com/eol_images/Entire_Site/2010330/293.WillFerrell.tg.043010.jpg"
    />
    <div
      aria-label="Will Ferrill"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#008F46",
        }
      }
    >
      WF
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials % Special Characters 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="% Special Characters"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#008F46",
        }
      }
    >
      %C
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Anakin Skywalker 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Anakin Skywalker"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      AS
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Budapest Skywalker 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Budapest Skywalker"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#0074AB",
        }
      }
    >
      BS
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Carlos Organa 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Carlos Organa"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#008F46",
        }
      }
    >
      CO
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Dennis Pimenta 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Dennis Pimenta"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#009380",
        }
      }
    >
      DP
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Diz Blau 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Diz Blau"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      DB
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Harry Potter 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Harry Potter"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#0074AB",
        }
      }
    >
      HP
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Obi-Wan Kenobi 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Obi-Wan Kenobi"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#0074AB",
        }
      }
    >
      OK
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Peia Organa 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Peia Organa"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#0074AB",
        }
      }
    >
      PO
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Single 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Single"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#C00F00",
        }
      }
    >
      SI
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials Uy Marley 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Uy Marley"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#0074AB",
        }
      }
    >
      UM
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials alpha-order names w/ varied colors 1`] = `
<div
  data-css-12kxz7c=""
>
  <div>
    <div
      aria-hidden={true}
      data-css-1a2nnhr=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Alan Turing"
        data-css-jw91c3=""
        style={
          Object {
            "backgroundColor": "#0074AB",
          }
        }
      >
        AT
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-1a2nnhr=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Alan Sleuse"
        data-css-jw91c3=""
        style={
          Object {
            "backgroundColor": "#D1487B",
          }
        }
      >
        AS
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-1a2nnhr=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Alan Alanosphere"
        data-css-jw91c3=""
        style={
          Object {
            "backgroundColor": "#D1487B",
          }
        }
      >
        AA
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-1a2nnhr=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Allen Alarm"
        data-css-jw91c3=""
        style={
          Object {
            "backgroundColor": "#C00F00",
          }
        }
      >
        AA
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-1a2nnhr=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Allen Allen"
        data-css-jw91c3=""
        style={
          Object {
            "backgroundColor": "#009380",
          }
        }
      >
        AA
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-1a2nnhr=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Allen Stewart"
        data-css-jw91c3=""
        style={
          Object {
            "backgroundColor": "#7048C6",
          }
        }
      >
        AS
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-1a2nnhr=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Brian Can Stand Here"
        data-css-jw91c3=""
        style={
          Object {
            "backgroundColor": "#7048C6",
          }
        }
      >
        BH
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-1a2nnhr=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Brian Can't Stand Here"
        data-css-jw91c3=""
        style={
          Object {
            "backgroundColor": "#0074AB",
          }
        }
      >
        BH
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-1a2nnhr=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Brian Life Of"
        data-css-jw91c3=""
        style={
          Object {
            "backgroundColor": "#D1487B",
          }
        }
      >
        BO
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-1a2nnhr=""
    >
      <img
        data-css-d7y6x2=""
        onError={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.jpg"
      />
      <div
        aria-label="Brian O'Mally"
        data-css-jw91c3=""
        style={
          Object {
            "backgroundColor": "#C00F00",
          }
        }
      >
        BO
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials empty name, no src 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label=""
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#C00F00",
        }
      }
    >
      :)
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials error-out image src, with name 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    aria-hidden={true}
    data-css-1a2nnhr=""
  >
    <img
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://jaketrent.com/fake.jpg"
    />
    <div
      aria-label="Bill Dill"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#0074AB",
        }
      }
    >
      BD
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials null name, no src 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label={null}
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#7048C6",
        }
      }
    >
      :)
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials single string name, no src 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="x"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      X
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials with invalid gravatar image 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    aria-hidden={true}
    data-css-1a2nnhr=""
  >
    <img
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/invalidhash?d=tmp&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
    <div
      aria-label="Alan Turing"
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#0074AB",
        }
      }
    >
      AT
    </div>
  </div>
</div>
`;

exports[`Storyshots Using Initials with invalid gravatar image, no name 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    aria-hidden={true}
    data-css-1a2nnhr=""
  >
    <img
      data-css-d7y6x2=""
      onError={[Function]}
      onLoad={[Function]}
      src="https://secure.gravatar.com/avatar/invalidhash?d=tmp&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
    />
    <div
      data-css-jw91c3=""
      style={
        Object {
          "backgroundColor": "#C00F00",
        }
      }
    >
      :)
    </div>
  </div>
</div>
`;
